--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <img src="whatsapp.png"></img>
                 <p>Whats App</p>
             <a href="https://chatgpt.com/" target="_blank" rel="noopener noreferrer">
-                <img src="ia.png"></img>
+                <img src="chat-gpt.png"></img>
                 <p>Chat GPT</p>
             </a>
         </a>
